0.0.35.3 (fixed the overlapping naming scheme for the similarly named parts of 2 different pages causing one of them to have incorrect background colour, fixed padding and sizes of the character card inside dashboard)

--- a/src/pages/CharacterContainer.css
+++ b/src/pages/CharacterContainer.css
@@ -8,7 +8,7 @@
 }
 
 /* Character Header */
-.character-header {
+.character-header-charactercontainer {
     height: 84px;
     padding: 0 20px;
     background: #0f0f0f;
