--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -58,7 +58,7 @@
     border-radius: 16px;
     padding: 20px;
     width: 100%;
-    height: 168px;
+    height: auto;
     box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.1);
     background: linear-gradient(315deg, #1f2937 0%, #111827 100%);
     display: flex;
@@ -66,9 +66,10 @@
     box-sizing: border-box;
 }
 
-.character-header {
+.character-header-dashboard {
     display: flex;
     align-items: center;
+    background: transparent;
 }
 
 .avatar {
@@ -94,7 +95,6 @@
     flex-direction: column;
     gap: 4px;
     flex: 1;
-    margin-right: 84px;
 }
 
 .character-name {
